syntax = "proto3";
package fusion;

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

enum CommonStatus {
    DISABLE = 0;
    ENABLE = 1;
}

message ResultBO {
    int32 status = 1;
    string msg = 2;
    //google.protobuf.Any data = 3;
    map<string, string> data = 3;
    CommonStatus common_status = 4;
}

message ActorReference {
    option (scalapb.message).no_box = false;
    option (scalapb.message).extends = "fusion.protobuf.ActorReferenceTrait";
    option (scalapb.message).companion_extends = "fusion.protobuf.ActorReferenceCompanion";
    string serialized = 1;
    google.protobuf.StringValue typ = 2;
}

//message ActorTypedReference {
//    option (scalapb.message).no_box = false;
//    option (scalapb.message).extends = "fusion.ActorTypedReferenceTrait";
//    option (scalapb.message).companion_extends = "fusion.ActorTypedReferenceCompanion";
//    string serialized = 1;
//}